--- a/Lecture Code/Week10.ipynb
+++ b/Lecture Code/Week10.ipynb
@@ -308,12 +308,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Error Types\n",
+    "\n",
+    "##Syntax Error\n",
+    "###Assigning to a literal\n",
+    "#1 = x\n",
+    "\n",
+    "###Not Matching parentheses\n",
+    "#(1]\n",
+    "\n",
+    "###No colon\n",
+    "#if True\n",
+    "\n",
+    "###Division by Zero\n",
+    "#1/0\n",
+    "\n",
+    "###Not matching the datatype\n",
+    "#x = [2]         #list\n",
+    "#x + 2           #list + int\n",
+    "\n",
+    "###Not defined variable\n",
+    "#print(a)\n",
+    "\n",
+    "###Bad Logic\n",
+    "#def badFactorial(n):\n",
+    "    #out = 0                     #because this is 0, the output is 0\n",
+    "    #for i in range(1, n+1):\n",
+    "        #out = out * i\n",
+    "    #return out\n",
+    "\n",
+    "#badFactorial(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "4.554153760148038\n",
+      "6.3858185206106\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tips Avoid Errors\n",
+    "\n",
+    "##Segmenting the code\n",
+    "y = x**2 + 2 * x + 1\n",
+    "print(y)\n",
+    "\n",
+    "y = x **2\n",
+    "y = y+2*x\n",
+    "y = y+1\n",
+    "print(y)\n",
+    "\n",
+    "##Using variables for numbers \n",
+    "import numpy as np\n",
+    "\n",
+    "s = 0\n",
+    "a= np.random.rand(10)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    s = s + a[i]\n",
+    "\n",
+    "\n",
+    "###Might need to change parameters, so extracting n is helpful for later debugging and refactoring\n",
+    "n = 10\n",
+    "s = 0                           #initialized as zero before loop is good\n",
+    "a = np.random.rand(n)\n",
+    "\n",
+    "for i in range(n):\n",
+    "    s = s+ a[i]\n",
+    "\n",
+    "s = sum(np.random.random(10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x not valid\n",
+      "TypeError\n",
+      "ValueError\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Try/Except\n",
+    "##Smoother coding\n",
+    "x = '6'                     #assigning string\n",
+    "try:\n",
+    "    if x > 3:               #comparing strings and int    \n",
+    "        print('X > 3')\n",
+    "except TypeError:           #using Exception name as condition; if it hits this error, interrupts\n",
+    "#except ValueError:          #if this wrong exception name, error arises\n",
+    "    print('x not valid')\n",
+    "\n",
+    "def testException(x):\n",
+    "    try:\n",
+    "        x = int(x)\n",
+    "        if x > 3:\n",
+    "            print(x)\n",
+    "    except TypeError:\n",
+    "        print('TypeError')\n",
+    "    except ValueError:\n",
+    "        print('ValueError')\n",
+    "    except:                                 #When no specific error\n",
+    "        print('Unexpected Error')\n",
+    "\n",
+    "x = [1,2]\n",
+    "testException(x)\n",
+    "\n",
+    "x = 's'\n",
+    "testException(x)\n",
+    "\n",
+    "#Raising your own defined exceptions\n",
+    "###using too much of this, might make the algorithm not good. Use with discretion\n",
+    "#x = 10\n",
+    "#if x > 5:\n",
+    "    #raise(Exception('x should be less than or equal to 5'))                         #raising errors are like printing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "6.0\n",
+      "(5+5j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Type Checking\n",
+    "\n",
+    "def Adder(a,b,c):\n",
+    "    if isinstance(a, float) and isinstance(b, float) and isinstance(c, float):          #type checking\n",
+    "        pass\n",
+    "    else:\n",
+    "        raise(TypeError('Must be floats'))\n",
+    "\n",
+    "    out = a + b + c\n",
+    "\n",
+    "    return out\n",
+    "\n",
+    "Adder(1.0, 2.0, 3.0)\n",
+    "###problem with this is that you can only do floats\n",
+    "\n",
+    "#Multiple typechecking at once; shorter than doing if((type(a) == float or (type(a == int))) and ...)\n",
+    "def Adder(a,b,c):\n",
+    "    if isinstance(a, (float, int, complex)) and isinstance(b, (float, int, complex)) and isinstance(c, (float, int, complex)):          #type checking\n",
+    "        pass\n",
+    "    else:\n",
+    "        raise(TypeError('Must be floats'))\n",
+    "\n",
+    "    out = a + b + c\n",
+    "\n",
+    "    return out\n",
+    "\n",
+    "print(Adder(1,2,3))\n",
+    "print(Adder(1.0,2,3))\n",
+    "print(Adder(1j,2 + 2j,3 +2j))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#can change"
+    "#Debugging\n",
+    "def squareNumber(x):\n",
+    "    sq = x ** 2\n",
+    "    sq += x\n",
+    "    \n",
+    "    return sq\n",
+    "\n",
+    "#print(squareNumber('10'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%debug\n",
+    "\n",
+    "#%pdb on                        #automatically turn on debugger when hit with error\n",
+    "#print(squareNumber('10'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pdb\n",
+    "\n",
+    "def squareNumber(x):\n",
+    "\n",
+    "    sq = x **2\n",
+    "\n",
+    "    #add break point\n",
+    "    #pdb.set_trace()\n",
+    "\n",
+    "    sq += x\n",
+    "\n",
+    "    return sq\n",
+    "\n",
+    "squareNumber(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
