--- a/Lecture Code/Week11.ipynb
+++ b/Lecture Code/Week11.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -254,6 +254,216 @@
     "sensor1.setVersion('2.0')\n",
     "sensor1.getVersion()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Private Variables\n",
+    "\n",
+    "class MyClass:\n",
+    "\n",
+    "    __hiddenVariable = 10\n",
+    "\n",
+    "\n",
+    "myObject = MyClass()\n",
+    "print(myObject._MyClass__hiddenVariable)                    #how to access private variables\n",
+    "#print(myObject.__hiddenVariable)                           #this one doesn't work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am Super Class 1\n",
+      "I am Super Class 2\n",
+      "I am derived\n",
+      "SuperClass 1 SuperClass 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Multiple Inheritance\n",
+    "\n",
+    "class SuperClass1(object):                          #inheriting from object class, but its the same as blank parantheses or without parantheses\n",
+    "    def __init__(self):                             #constructor 1\n",
+    "        self.str1 = \"SuperClass 1\"\n",
+    "        print(\"I am Super Class 1\")\n",
+    "\n",
+    "class SuperClass2(object):\n",
+    "    def __init__(self):                             #constructor 2\n",
+    "        self.str2 = \"SuperClass 2\"\n",
+    "        print(\"I am Super Class 2\")\n",
+    "\n",
+    "class DerivedClass(SuperClass1, SuperClass2):       #inheriting from 2 classes\n",
+    "    def __init__(self):\n",
+    "        #calling 2 constructors from each class\n",
+    "        SuperClass1.__init__(self)\n",
+    "        SuperClass2.__init__(self)\n",
+    "        print(\"I am derived\")\n",
+    "    def printStrings(self):\n",
+    "        print(self.str1, self.str2)\n",
+    "\n",
+    "\n",
+    "#note that calling the derived class, runs the parent classes first\n",
+    "object1 = DerivedClass()                            #instantiating\n",
+    "object1.printStrings()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20\n",
+      "10 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Parent Members\n",
+    "\n",
+    "class Base(object):\n",
+    "    def __init__(self,x):\n",
+    "        self.x = x\n",
+    "\n",
+    "class DerivedClass(Base):\n",
+    "    def __init__(self,x,y):\n",
+    "        Base.x = x                      #accessing from parent class\n",
+    "        self.y = y  \n",
+    "    \n",
+    "    def printXY(self):\n",
+    "        print(Base.x, self.y)\n",
+    "\n",
+    "object1 = DerivedClass(10,20)\n",
+    "object1.printXY()\n",
+    "\n",
+    "\n",
+    "class Base2(object):\n",
+    "    def __init__(self,x):\n",
+    "        self.x = x\n",
+    "\n",
+    "class DerivedClass2(Base):\n",
+    "    def __init__(self,x,y):\n",
+    "        super(DerivedClass2, self).__init__(x)                      #accessing from parent class\n",
+    "        self.y = y  \n",
+    "    \n",
+    "    def printXY(self):\n",
+    "        print(self.x, self.y)               #need to use self.x, cant do super().x like Base.x\n",
+    "\n",
+    "object2 = DerivedClass2(10,20)\n",
+    "object2.printXY()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Subclass and Instance\n",
+    "\n",
+    "#Empty classes\n",
+    "class Base(object):\n",
+    "    pass\n",
+    "class DerivedClass(Base):\n",
+    "    pass\n",
+    "\n",
+    "print(issubclass(DerivedClass, Base))\n",
+    "print(issubclass(Base, DerivedClass))\n",
+    "\n",
+    "derivedObject = DerivedClass()\n",
+    "baseObject = Base()\n",
+    "\n",
+    "#baseObject is not an instance of Derived Class\n",
+    "print(isinstance(baseObject, DerivedClass))\n",
+    "\n",
+    "#derivedObject is an instance of Base Class, because it inherited???\n",
+    "print(isinstance(derivedObject, Base))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From str method of Test: a is 1234, b is 5678\n",
+      "[Test a:1234 b:5678]\n",
+      "<__main__.Test object at 0x10c9c1ff0>\n",
+      "[<__main__.Test object at 0x10c9c1ff0>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Printing an Object itself, instead of having a print code in a function\n",
+    "#this can be used for printing radius or coordinates of a circle\n",
+    "class Test:\n",
+    "    def __init__(self,a,b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return \"Test a:%s b:%s\" % (self.a, self.b)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"From str method of Test: a is %s, b is %s\" % (self.a, self.b)\n",
+    "\n",
+    "t = Test(1234, 5678)\n",
+    "print(t)\n",
+    "print([t])\n",
+    "\n",
+    "##if repr or str not defined, wont work\n",
+    "class Test: \n",
+    "    def __init__(self,a,b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "\n",
+    "t= Test(1234,5678)\n",
+    "print(t)\n",
+    "print([t])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
