--- a/Lecture Code/Week12.ipynb
+++ b/Lecture Code/Week12.ipynb
@@ -15,6 +15,7 @@
    ],
    "source": [
     "#Floating Point Representation\n",
+    "##Can see the maximum, minimum, mantessa, etc of floats\n",
     "\n",
     "import sys\n",
     "print(sys.float_info)"
@@ -180,6 +181,148 @@
     "#The more iterations, the greater the error\n",
     "print(AddAndSubtract(100))\n",
     "print(AddAndSubtract(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Using Dictionaries to define node and paths\n",
+    "graph = {'A': ['B', 'C'], \n",
+    "    'B': ['C', 'D'], \n",
+    "    'C':['D'], \n",
+    "    'D':['E'], \n",
+    "    'E': ['F'], \n",
+    "    'F': ['C']}\n",
+    "\n",
+    "#graph = {'A': [['B', 2], ['C', 1]], \n",
+    "    #'B': [['C', 2], ['D', 3]], \n",
+    "    #'C': [['D', 1]], \n",
+    "    #'D': [['C', 1]], \n",
+    "    #'E': [['F', 3]], \n",
+    "    #'F': [['C', 4]]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'C', 'D']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def FindPath(graph, start, end, path = []):             #The empty list Path = [] is the default value\n",
+    "    path = path + [start]\n",
+    "\n",
+    "    #when the destination is reached\n",
+    "    if start == end:\n",
+    "        return path\n",
+    "    \n",
+    "    if not start in graph:\n",
+    "        return None\n",
+    "\n",
+    "    for node in graph[start]:                           #check if the path node connected to the current node\n",
+    "        if node not in path:                            #don't want to repeat; don't want the same node in the path\n",
+    "                                                        #basically choosing a new node\n",
+    "            newPath = FindPath(graph, node, end, path)\n",
+    "            \n",
+    "            if newPath:                                 #if not empty, return; finds only the first path\n",
+    "                return newPath\n",
+    "    \n",
+    "    return None\n",
+    "\n",
+    "FindPath(graph, 'A', 'D')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A', 'B', 'C', 'D'], ['A', 'B', 'D'], ['A', 'C', 'D']]\n",
+      "[['A']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def FindAllPaths(graph, start, end, path = []):\n",
+    "\n",
+    "    path = path + [start]\n",
+    "    #start is a string, putting inside a bracket makes it a list; basically appending it\n",
+    "\n",
+    "    if start == end:\n",
+    "        return [path]\n",
+    "\n",
+    "    if not start in graph:\n",
+    "        return []\n",
+    "\n",
+    "    paths = []\n",
+    "\n",
+    "    for node in graph[start]:\n",
+    "        if node not in path:\n",
+    "            newPaths = FindAllPaths(graph, node, end, path)\n",
+    "\n",
+    "            for newPath in newPaths:\n",
+    "                paths.append(newPath)\n",
+    "    \n",
+    "    return paths\n",
+    "\n",
+    "\n",
+    "print(FindAllPaths(graph, 'A', 'D'))\n",
+    "print(FindAllPaths(graph, 'A', 'A'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The optimal value is: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def minMax(currentDepth, nodeIndex, maxTurn, scores, targetDepth):      #maxTurn just shows whose turn it is. Whether to maximize or minimize\n",
+    "\n",
+    "    #base case: targetDepth reached\n",
+    "    if(currentDepth == targetDepth):\n",
+    "        return scores[nodeIndex]\n",
+    "\n",
+    "    if(maxTurn):\n",
+    "        return max(minMax(currentDepth + 1, nodeIndex * 2, False, scores, targetDepth), minMax(currentDepth + 1, nodeIndex *2 + 1, False, scores, targetDepth))\n",
+    "        # The false for the parameter maxTurn; if the player has to find the max score, we search the next connected node with min score(?)\n",
+    "\n",
+    "    else:\n",
+    "        return min(minMax(currentDepth + 1, nodeIndex *2, True, scores, targetDepth), minMax(currentDepth + 1, nodeIndex *2 + 1, True, scores, targetDepth))\n",
+    "\n",
+    "\n",
+    "scores = [3,5,2,9,12,5,23,23]\n",
+    "\n",
+    "treeDepth = math.log(len(scores), 2)\n",
+    "\n",
+    "print('The optimal value is: ', end = \"\")\n",
+    "print(minMax(0,0,True, scores, treeDepth))\n"
    ]
   },
   {
