--- a/Exam Problems/FinalsPracticeProblems.ipynb
+++ b/Exam Problems/FinalsPracticeProblems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,11 +54,7 @@
     "            xs.append(self.vertex(i)[0])\n",
     "            ys.append(self.vertex(i)[1])\n",
     "        plt.fill(xs, ys, color)\n",
-    "        #don't do plt.show(), because it draws as different triangle\n",
-    "            \n",
-    "        \n",
-    "            \n",
-    "\n"
+    "        #don't do plt.show(), because it draws as different triangle"
    ]
   },
   {
@@ -129,6 +125,8 @@
     }
    ],
    "source": [
+    "#Problem 2 Solution\n",
+    "\n",
     "side = 3; #The length of sides\n",
     "a=Triangle([(0,0),(side,0),(side/2,(side**2-(side/2)**2)**0.5)])\n",
     "Sierpinski_triangle(a,4)"
@@ -190,13 +188,6 @@
     "#Problem 3 Solution\n",
     "my_Sierpinski(1000)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
