--- a/Exam Problems/FinalsPracticeProblems2.ipynb
+++ b/Exam Problems/FinalsPracticeProblems2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,11 +61,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, -0.08642, 0.3523]\n"
+     ]
+    }
+   ],
    "source": [
-    "a = getNumbers(' a=0.    b=-0.08642     c=0.3523')"
+    "a = getNumbers(' a=0.    b=-0.08642     c=0.3523')\n",
+    "print(a)"
    ]
   },
   {
