--- a/Assignments/Assignment8.ipynb
+++ b/Assignments/Assignment8.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0.29650279232114374\\n', '0.3226755565322108\\n', '0.41856736407579753\\n', '0.3158636037175647\\n', '0.0005463846722482124\\n', '0.48090009964827884\\n', '0.1160585774818722\\n', '0.08051998703709573\\n', '0.6341924350173526\\n', '0.8947059828832228\\n']\n"
+      "['0.5963110378508577\\n', '0.859351175295493\\n', '0.4483582599229702\\n', '0.16933523568641484\\n', '0.018255833709921676\\n', '0.3394288391433403\\n', '0.8138031895771609\\n', '0.38449082795579714\\n', '0.6116687535985963\\n', '0.874009402779976\\n']\n"
      ]
     }
    ],
@@ -43,18 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.75795121 0.36757567 0.09871107 0.67410526 0.56706081]\n",
-      " [0.679944   0.92013374 0.88070148 0.34257625 0.65565684]\n",
-      " [0.17691458 0.86483593 0.92080843 0.59385336 0.65054759]\n",
-      " [0.8502651  0.34153369 0.88971903 0.95683389 0.1227996 ]\n",
-      " [0.01066048 0.73884527 0.15211885 0.36176142 0.02546905]]\n"
+      "[[0.65340651 0.77324413 0.40899103 0.39769466 0.11084571]\n",
+      " [0.46108744 0.4744068  0.12785537 0.00454008 0.8624204 ]\n",
+      " [0.7925325  0.94206165 0.4485098  0.79536396 0.15910558]\n",
+      " [0.27782369 0.41668428 0.92523173 0.0443801  0.17659366]\n",
+      " [0.7840601  0.87095802 0.18788335 0.02345101 0.51296653]]\n"
      ]
     },
     {
@@ -64,7 +64,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [38], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mlen\u001b[39m(content)):\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m content[i]:\n\u001b[0;32m---> 16\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[43mcontent\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m)\n",
+      "Cell \u001b[0;32mIn [5], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mlen\u001b[39m(content)):\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m content[i]:\n\u001b[0;32m---> 16\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[43mcontent\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m)\n",
       "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
      ]
     }
@@ -91,9 +91,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(list_1)):\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(list_1[i])):\n\u001b[0;32m----> 8\u001b[0m         \u001b[43mf\u001b[49m\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;28mstr\u001b[39m(list_1[i][j]) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m         f\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m f\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Question 3\n",
     "\n",
@@ -105,16 +117,100 @@
     "        f.write(str(list_1[i][j]) + \",\")\n",
     "        f.write(\"\\n\")\n",
     "f.close()\n",
-    "\n",
+    "asf\n",
     "#Print it back as a 2D numpy array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "EOFError",
+     "evalue": "Ran out of input",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m f2\u001b[38;5;241m.\u001b[39mclose\n\u001b[1;32m      9\u001b[0m f3 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./Q4.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 10\u001b[0m my_data_1 \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf3\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m f3\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_data_1)\n",
+      "\u001b[0;31mEOFError\u001b[0m: Ran out of input"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 4\n",
+    "##Save the same array in problem 2 to a pickle file and load it back\n",
+    "\n",
+    "import pickle \n",
+    "f2 = open('Q4.pkl', 'wb')\n",
+    "pickle.dump(list_1, f2)\n",
+    "f2.close\n",
+    "\n",
+    "f3 = open('./Q4.pkl', 'rb')\n",
+    "my_data_1 = pickle.load(f3)\n",
+    "f3.close()\n",
+    "print(my_data_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Doe\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 5\n",
+    "##Create a dictionary and save it to a JSON file\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "my_data_2 = {\n",
+    "    'firstName': ['John', 'Anna', 'Peter'], \n",
+    "    'lastName': ['Doe', 'Smith', 'Jones']\n",
+    "}\n",
+    "\n",
+    "print(my_data_2['firstName'][0]+' ' + my_data_2['lastName'][0])\n",
+    "\n",
+    "f4 = open('Q5.json', 'w')\n",
+    "json.dump(my_data_2, f4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.7824083902672243, 0.7955538806284347, 0.982516552256808, 0.8122395349793721, 0.7713140446319796]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 6\n",
+    "##Create a 1D numpy array and save it to a JSON file with the key named 'data'. Then load it back. \n",
+    "array_2 = np.random.rand(5)\n",
+    "my_data_2 = {'data': list(array_2)}\n",
+    "\n",
+    "f5 = open('Q6.json', 'w')\n",
+    "json.dump(my_data_2, f5)\n",
+    "f5.close()\n",
+    "\n",
+    "f6 = open('./Q6.json', 'r')\n",
+    "my_data_3 = json.load(f6)\n",
+    "f6.close()\n",
+    "print(my_data_3['data'])"
+   ]
   }
  ],
  "metadata": {
